manifests/digitalocean/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: kubeprod
  name: kubeprod
