manifests/digitalocean/elasticsearch-sts.yaml
apiVersion: apps/v1beta2
kind: StatefulSet
metadata:
  labels:
    k8s-app: elasticsearch-logging
    name: elasticsearch-logging
  name: elasticsearch-logging
  namespace: kubeprod
spec:
  podManagementPolicy: Parallel
  replicas: 3
  selector:
    matchLabels:
      k8s-app: elasticsearch-logging
      name: elasticsearch-logging
  serviceName: elasticsearch-logging
  template:
    metadata:
      annotations:
        prometheus.io/port: "9102"
        prometheus.io/scrape: "true"
      labels:
        k8s-app: elasticsearch-logging
        name: elasticsearch-logging
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: node-role.kubernetes.io/system
                operator: Exists
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  k8s-app: elasticsearch-logging
                  name: elasticsearch-logging
              topologyKey: failure-domain.beta.kubernetes.io/zone
            weight: 50
          - podAffinityTerm:
              labelSelector:
                matchLabels:
                  k8s-app: elasticsearch-logging
                  name: elasticsearch-logging
              topologyKey: kubernetes.io/hostname
            weight: 100
      containers:
      - args: []
        image: bitnami/elasticsearch:6.6.0
        imagePullPolicy: IfNotPresent
        livenessProbe:
          failureThreshold: 4
          httpGet:
            path: /_cluster/health?local=true
            port: db
          initialDelaySeconds: 300
          periodSeconds: 30
          successThreshold: 1
        name: elasticsearch-logging
        ports:
        - containerPort: 9200
          name: db
        - containerPort: 9300
          name: transport
        readinessProbe:
          failureThreshold: 4
          httpGet:
            path: /_cluster/health?local=true
            port: db
          initialDelaySeconds: 120
          periodSeconds: 30
          successThreshold: 2
        resources:
          limits:
            cpu: "4"
            memory: 16Gi
          requests:
            cpu: "2"
            memory: 8Gi
        securityContext:
          runAsUser: 1001
        stdin: false
        tty: false
        volumeMounts:
        - mountPath: /bitnami/elasticsearch/data
          name: data
        - mountPath: /opt/bitnami/java/lib/security/java.security.custom
          name: java-security
          readOnly: true
          subPath: java.security
      - args:
        - --es.all=false
        - --es.timeout=20s
        - --es.uri=http://localhost:9200/
        - --web.listen-address=:9102
        - --web.telemetry-path=/metrics
        command:
        - elasticsearch_exporter
        env: []
        image: justwatch/elasticsearch_exporter:1.0.1
        imagePullPolicy: IfNotPresent
        livenessProbe:
          httpGet:
            path: /
            port: metrics
        name: prom-exporter
        ports:
        - containerPort: 9102
          name: metrics
        stdin: false
        tty: false
        volumeMounts: []
      imagePullSecrets: []
      securityContext:
        fsGroup: 1001
      serviceAccountName: elasticsearch-logging
      terminationGracePeriodSeconds: 300
      tolerations:
      - effect: NoSchedule
        key: node-role.kubernetes.io/system
        operator: Exists
      volumes:
      - configMap:
          name: java-elasticsearch-logging
        name: java-security
  updateStrategy:
    type: RollingUpdate
  volumeClaimTemplates:
  - metadata:
      labels:
        name: data
      name: data
    spec:
      accessModes:
      - ReadWriteOnce
      resources:
        requests:
          storage: 1000Gi
