manifests/digitalocean/kibana-svc.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    name: kibana-logging
  name: kibana-logging
  namespace: kubeprod
spec:
  ports:
  - name: ui
    port: 5601
    targetPort: 5601
  selector:
    name: kibana
  type: ClusterIP
