manifests/digitalocean/nginx-ingress-svc.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    service.beta.kubernetes.io/do-loadbalancer-enable-proxy-protocol: "true"
  labels:
    name: nginx-ingress
  name: nginx-ingress
  namespace: kubeprod
spec:
  externalTrafficPolicy: Local
  ports:
  - name: http
    port: 80
    protocol: TCP
  - name: https
    port: 443
    protocol: TCP
  selector:
    name: nginx-ingress-controller
  type: LoadBalancer
